进程间通信之-信号signal--linux内核剖析（九）--http://blog.csdn.net/gatieme/article/details/50990456

--- a/system/unix/Makefile
+++ b/system/unix/Makefile
@@ -2,7 +2,7 @@ ROOT=../../
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-DIRS=zombie pipeline
+DIRS=zombie pipeline pthread  semaphore  signal
 
 
 all:
