进程间通信之-信号量semaphore--linux内核剖析（十）--http://blog.csdn.net/gatieme/article/details/50994533

--- a/system/unix/semaphore/Makefile
+++ b/system/unix/semaphore/Makefile
@@ -5,7 +5,8 @@ include $(ROOT)/Make.defines.$(PLATFORM)
 DEFINES+= -DSEMAPHORE
 
 DLL=libsempv.so
-target=forksem pthread_sem1 pthread_sem2 fork_sync
+target=forksem pthread_sem1 pthread_sem2 fork_sync server client		\
+	   semget semop semgetvalue semsetvalue	producer_consumer 
 
 DEFINES= -DDEFINE_SEMAPHORE
 
@@ -27,6 +28,34 @@ pthread_sem2 : pthread_sem2.o
 fork_sync : fork_sync.o
 	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
 	@echo -e "两个线程互斥读写number变量[通过两个信号量保证执行顺序]...\n"
+
+server : server.o
+	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
+	@echo -e "有名信号量在无相关进程间的同步[服务器]...\n"
+
+client : client.o
+	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
+	@echo -e "有名信号量在无相关进程间的同步[客户端]...\n"
+
+semget : semget.o
+	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
+	@echo -e "System V的信号量, 测试semget函数...\n"
+
+semop : semop.o
+	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
+	@echo -e "System V的信号量, 测试semop函数...\n"
+
+semgetvalua : semgetvalue.o
+	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
+	@echo -e "System v信号量, 通过semctl函数获取信号量的值...\n"
+
+semsetvalua : semsetvalue.o
+	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
+	@echo -e "System v信号量, 通过semctl函数设置信号量的值...\n"
+
+producer_consumer : producer_consumer.o
+	$(CC) $^ -o $@ $(LDFLAGS) -lpthread
+	@echo -e "生产者消费者问题...\n"
 
 $(DLL):sempv.o
 	$(CC) -shared $^ -o $@
