--- a/system/linux/fork/Makefile
+++ b/system/linux/fork/Makefile
@@ -2,7 +2,7 @@ ROOT=../../..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-target= testfork testfork2 testvfork testvfork2
+target= testfork testvfork testvfork2 testclone
 
 
 all:$(target)
@@ -12,15 +12,15 @@ testfork : testfork.o
 	$(CC) $^ -o $@ $(LDFLAGS)
 	@echo "编译fork的测试程序..."
 
-testfork2 : testfork2.o
-	$(CC) $^ -o $@ $(LDFLAGS)
-	@echo "编译僵死进程测试程序..."
-
 testvfork : testvfork.o
 	$(CC) $^ -o $@ $(LDFLAGS)
 	@echo "编译循环产生僵死进程的测试程序..."
 
 testvfork2 : testvfork2.o
+	$(CC) $^ -o $@ $(LDFLAGS)
+	@echo "编译循环产生僵死进程的测试程序..."
+
+testclone : testclone.o
 	$(CC) $^ -o $@ $(LDFLAGS)
 	@echo "编译循环产生僵死进程的测试程序..."
 
