--- a/language/c/cpp/apple/Makefile
+++ b/language/c/cpp/apple/Makefile
@@ -21,46 +21,46 @@ endif
 INC = -I./
 
 
-target=main_wrapper
-
+target=	main_wrapper main_wrapper_sdk			\
+		main_handle	main_handle_sdk
 
 
 all:$(target)
 
 
 
-main_wrapper : main.o libapplewrapper.a
+main_wrapper : mainwrapper.o libapplewrapper.a
 	$(CC) $^ -o $@ -lstdc++
 
 
-main_handle : main.o libapplehandle.a 
+main_handle : mainhandle.o libapplehandle.a
 	$(CC) $^ -o $@ -lstdc++
 
-main_wrapper_sdk : main.o libapplewrapper.so
-	$(CC) $^ -o $@ -lstdc++ -L./ -lapplewrapper
+main_wrapper_sdk : mainwrapper.o libapplewrapper.so
+	$(CC $^ -o $@ -lstdc++ -L./ -lapplewrapper  $(CXXFLAGS)
 
-main_handle_sdk : main.o libapplehandle.so
-	$(CC) $^ -o $@ -lstdc++ -L./ -lapplehandle
+main_handle_sdk : mainhandle.o libapplehandle.so
+	$(CC) $^ -o $@ -lstdc++ -L./ -lapplehandle	$(CXXFLAGS)
 
 
-libapplewrapper.a:apple.o applewrapper.o
+libapplewrapper.a : apple.o applewrapper.o
 	ar crv $@ $^
 
-libapplehandle.a:apple.o applehandle.o
+libapplehandle.a : apple.o applehandle.o
 	ar crv $@ $^
 
-libapplewrapper.ao : apple.o applewrapper.o
+libapplewrapper.so : apple.o applewrapper.o
 	$(CXX) $(SHAREDLIB_LINK_OPTIONS) $(FPIC) $(LDFLAGS) $^ -o $@
 
-libapplehandle.ao : apple.o applehandle.o
+libapplehandle.so : apple.o applehandle.o
 	$(CXX) $(SHAREDLIB_LINK_OPTIONS) $(FPIC) $(LDFLAGS) $^ -o $@
 
 
-%.o:%.cpp
+%.o : %.cpp
 	$(CXX) $(FPIC) $(CXXFLAGS) -c $^ -o $@ $(INC)
 
 
-%.o:%.c
+%.o : %.c
 	$(CC) $(FPIC) $(CFLAGS) -c $^ -o $@ $(INC)
 
 
