C++与C之间相互接口和库函数调用--http://blog.csdn.net/gatieme/article/details/52730680

--- a/language/c/cpp/Makefile
+++ b/language/c/cpp/Makefile
@@ -8,6 +8,16 @@ DIRS=	add    sample apple cpp_link_c c_link_cpp		\
 		c_link_cpp_func c_link_cpp_overload_func   		\
 		c_link_cpp_mem_func c_link_cpp_class
 
+ECHO_add="first和second的add函数测试程序"
+ECHO_sample="简单的测试程序"
+ECHO_apple="C语言链接C++库的完整测试程序(wrapper方法和handle方法)"
+ECHO_cpp_link_c="C++链接C的函数"
+ECHO_c_link_cpp="C语言链接C++的函数"
+ECHO_c_link_cpp_func="C语言链接C++的基本函数"
+ECHO_c_link_cpp_overload_func="C语言链接C++的重载函数"
+ECHO_c_link_cpp_mem_func="C语言链接C++的类成员函数"
+ECHO_c_link_cpp_class="C语言链接C++的完整类接口"
+
 
 MAKE_DIR=make -C
 
@@ -22,7 +32,7 @@ SUBDIRS=$(DIRS)
 
 all	:
 	for i in $(DIRS); do \
-		(cd $$i && echo "making $$i" && $(MAKE) ) || exit 1; \
+		(cd $$i && echo "making $$i" && echo $(ECHO_$(i)) && $(MAKE) ) || exit 1; \
 	done
 
 clean:
