Linux和Mac下的微信电脑版electronic-wechat(非官方)--http://blog.csdn.net/gatieme/article/details/52800015

--- a/language/c/errno/Makefile
+++ b/language/c/errno/Makefile
@@ -10,7 +10,7 @@ all:$(target)
 
 showerrno : showerrno.o
 	$(CC) $^ -o $@ $(LDFLAGS)
-	echo "输出errno的值..."
+	@echo "输出errno的值..."
 
 %.o : %.c
 	$(CC) -c $^ -o $@  $(CFLAGS) $(DEFINES)
