Ubuntu下deb包的方法详解--http://blog.csdn.net/gatieme/article/details/52829907

--- a/language/c/errno/Makefile
+++ b/language/c/errno/Makefile
@@ -16,5 +16,5 @@ showerrno : showerrno.o
 	$(CC) -c $^ -o $@  $(CFLAGS) $(DEFINES)
 
 clean :
-	rm *.o
-	rm $(target)
+	rm -rf *.o
+	rm -rf $(target)
