--- a/language/c/memory_layout/Makefile
+++ b/language/c/memory_layout/Makefile
@@ -17,5 +17,5 @@ memorylayout : memorylayout.o
 	$(CC) -c $^ -o $@  $(CFLAGS) $(DEFINES)
 
 clean :
-	rm *.o
-	rm $(target)
+	rm -rf *.o
+	rm -rf $(target)
