用户态使用 glibc/backtrace 追踪函数调用堆栈定位段错误--https://blog.csdn.net/gatieme/article/details/84189280

--- a/language/c/backtrace/Makefile
+++ b/language/c/backtrace/Makefile
@@ -1,10 +1,17 @@
-target=example prog handler
+target = example prog handler builtin0 builtin_c
+target_cpp = builtin_cpp
 
-all:$(target)
+all:$(target) $(target_cpp)
 
 example : example.o
 prog : prog.o
 handler : handler.o
+builtin0 : builtin0.o
+builtin_c : builtin.o
+builtin_cpp : builtin.c
+
+$(target_cpp) :
+	g++ $^ -o $@ $(LDFLAGS) -rdynamic -g -ldl
 
 $(target) :
 	$(CC) $^ -o $@ $(LDFLAGS) -rdynamic -g
@@ -14,3 +21,4 @@ $(target) :
 clean :
 	rm -rf *.o
 	rm -rf $(target)
+	rm -rf $(target_cpp)
